{"filter":false,"title":"configure.in","tooltip":"/mypeb/configure.in","ace":{"folds":[],"scrolltop":0,"scrollleft":0,"selection":{"start":{"row":0,"column":0},"end":{"row":0,"column":0},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":0},"hash":"44aff13cc070d68c15f73218e780c352a55ba142","undoManager":{"mark":-1,"position":-1,"stack":[]},"timestamp":1449662504000}